--- a/pwa/index.html
+++ b/pwa/index.html
@@ -10,6 +10,7 @@
 <body>
     <header>
         <h1>Prompt Viewer</h1>
+        <button id="refresh">Refresh Prompts</button>
     </header>
     <main id="content">
         <p>Loading prompts...</p>
